[tool.poetry]
name = "dra_python_sdk"
version = "0.0.1"
description = "IBM Cloud DrAutomation Python SDK"
authors = ["Mani.Prasad.Arava@ibm.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
ibm_cloud_sdk_core = "3.24.2"
ibm_platform_services = "0.68.3"
pytest = "7.4.4"
requests = "2.32.5"
responses = "0.25.7"

[tool.poetry.dev-dependencies]
# Add any dev-only dependencies here if needed

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
